Fix level bar not showing in pantheon-files

--- a/gtk-3.0/apps/_pantheon.scss
+++ b/gtk-3.0/apps/_pantheon.scss
@@ -285,25 +285,22 @@ LibraryWindow {
       0 1px 2px transparentize(#000, 0.77);
 }
 
-/**level bars**/
+/************
+* Level bar *
+*************/
 
-.sidebar .source-list{
-  &.view {
-    &.level-bar {
-      &,&:selected,&:selected:focus{
-        background-color: lighten($_sidebar_color, 15%);
-        border: 1px solid transparentize(black, 0.86);
-        box-shadow: 0 1px 0 transparentize(#000, 0.75);
-        border-radius: 2px;
-      }
-      &.fill-block{
-        border: none;
-      }
+.source-list.view {
+  &.level-bar {
+    &, &:selected, &:selected:focus {
+      background: linear-gradient(lighten($_sidebar_color, 15%), lighten($_sidebar_color, 15%));
+      border: 1px solid transparentize(black, 0.86);
+      box-shadow: 0 1px 0 transparentize(#000, 0.75);
+      border-radius: 2px;
     }
-    &.fill-block{
-      &,&:hover,&:selected,&:selected:focus{
-        background-image: none;
-        background-color: $yellow;
+    &.fill-block {
+      border: none;
+      &, &:hover, &:selected, &:selected:focus {
+        background: linear-gradient($yellow, $yellow) ;
       }
     }
   }
